# cython

./: .coveragerc  .gitignore  .hgignore  BUILD.bazel  CHANGES.rst  COPYING.txt  INSTALL.txt  MANIFEST.in  Makefile  README.rst  USAGE.txt  appveyor.yml  cython0.py  cythonize0.py  runtests.py  setup.py
.github/workflows/: ci.yml
Cython0/: Shadow.py  StringIOTree.pxd  Utils.py  __init__.py
Cython0/Compiler/: Annotate.py  CmdLine.py  Code.pxd  Code.py  CythonScope.py  ExprNodes.py  FlowControl.pxd  FlowControl.py  Main.py  MemoryView.py  ModuleNode.py  Nodes.py  Optimize.py  ParseTreeTransforms.pxd  ParseTreeTransforms.py  Parsing.pxd  Parsing.py  PyrexTypes.py  Pythran.py  Scanning.pxd  Scanning.py  Symtab.py  TreeFragment.py  TypeSlots.py  UtilityCode.py  Visitor.pxd  Visitor.py
Cython0/Debugger/: Cygdb.py  DebugWriter.py  libcython.py
Cython0/Distutils/: __init__.py  build_ext.py  extension.py  old_build_ext.py
Cython0/Plex/: Scanners.pxd  Scanners.py
Cython0/Runtime/: refnanny.pyx
Cython0/Tempita/: _looper.py
Cython0/Tests/: TestCodeWriter.py  TestJediTyper.py  TestStringIOTree.py
Cython0/Utility/: CpdefEnums.pyx  CppConvert.pyx  MemoryView.pyx  ModuleSetupCode.c  Optimize.c  TestCythonScope.pyx  TypeConversion.c
Demos/: overflow_perf.pyx  setup.py
Demos/embed/: Makefile  (+4 more)
Tools/: cystdlib.py  cython-mode.el  cython-numpy-mode-kate.xml  jedityper.py  kate.diff  rules.bzl
appveyor/: install.ps1
docs/: CONTRIBUTING.rst  Makefile  README  TODO  conf.py  index.rst
pyximport/: README.rst  pyxbuild.py  pyximport.py
tests/: bugs.txt  pypy_bugs.txt
(+452 files in other folders)
